--- a/FedRateCut2020vs2024.ipynb
+++ b/FedRateCut2020vs2024.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {
     "id": "JWYq22_0JgHx"
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "metadata": {
     "id": "6yCtiLYSJl4d"
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "[19606 rows x 7 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "std      3.912594  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
        "[3570 rows x 6 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1108,6 @@
     "        'Std Post-2024': std_post_2024\n",
     "    })\n",
     "\n",
-    "# Convert results to DataFrame for easier viewing\n",
     "std_df = pd.DataFrame(std_results)\n",
     "print(std_df)"
    ]
@@ -1142,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1178,7 @@
     "    '2024PreRateCut': nasdaq_pre_2024,\n",
     "    '2024PostRateCut': nasdaq_post_2024\n",
     "})\n",
-    "cumulative_returns.index = pd.RangeIndex(start=1, stop=len(cumulative_returns_2020) + 1, step=1)\n",
+    "cumulative_returns.index = pd.RangeIndex(start=1, stop=len(cumulative_returns) + 1, step=1)\n",
     "\n",
     "print(cumulative_returns)"
    ]
