--- a/FedRateCut2020vs2024.ipynb
+++ b/FedRateCut2020vs2024.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Overview"
+    "# Impact of Federal Reserve Rate Cuts on Economic Indicators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Project Overview"
    ]
   },
   {
@@ -20,7 +27,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# Importing Libraries"
+    "## Importing Libraries"
    ]
   },
   {
@@ -90,7 +97,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# Gathering Data"
+    "## Gathering Data"
    ]
   },
   {
@@ -327,7 +334,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# Data Cleaning"
+    "## Data Cleaning"
    ]
   },
   {
@@ -789,9 +796,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "# Analysis"
+    "## Analysis"
    ]
   },
   {
@@ -1203,7 +1212,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# Conclusion"
+    "## Conclusion"
    ]
   },
   {
