--- a/FedRateCut2020vs2024.ipynb
+++ b/FedRateCut2020vs2024.ipynb
@@ -796,9 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Analysis"
    ]
@@ -1208,9 +1206,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Conclusion"
    ]
@@ -1219,27 +1215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The analysis of the 2020 and 2024 Federal Reserve rate cuts provides valuable insights into how monetary policy affects financial markets and key economic indicators under different circumstances. Each rate cut reflected a unique economic context, highlighting the Fed's role in responding to both crisis and growth environments.\n",
-    "\n",
-    "- Market Response and the NASDAQ Composite:\n",
-    "    - The NASDAQ Composite’s reactions to the rate cuts tell two very different stories. In 2020, the immediate decline in NASDAQ following the Fed’s aggressive 150-basis-point cut highlights investor fear and uncertainty amid the COVID-19 pandemic. This steep sell-off reflects the economic turmoil that required drastic intervention. By contrast, the 2024 rate cut was met with a calmer, modest uptick in the NASDAQ, suggesting a more stable environment where investors viewed the Fed's 50-basis-point reduction as a supportive measure rather than a crisis response.\n",
-    "<br>\n",
-    "- Labor Market and Economic Stability:\n",
-    "    - The Unemployment Rate’s behavior further underscores the differences in each rate cut’s context. The spike in unemployment following the 2020 cut illustrates the pandemic’s severe impact on the labor market, as businesses faced unprecedented disruptions. In 2024, however, unemployment remained stable, pointing to a resilient labor market. This stability suggests that the 2024 rate cut aimed to preemptively support growth rather than counteract immediate job losses, reflecting the Fed’s adaptability in addressing both acute crises and more measured economic shifts.\n",
-    "<br>\n",
-    "- Inflation and Economic Recovery:\n",
-    "    - Inflation trends around each rate cut reveal the evolving economic landscape. The downward inflation trend in 2020 indicates deflationary pressures brought on by the demand shock during the pandemic. The Fed’s large rate cut aimed to stimulate demand and support price stability in a contracting economy. In 2024, however, inflation was gradually rising, suggesting that the Fed’s rate cut was intended to maintain growth without overheating the economy. This shift shows how the Fed’s role evolves with economic recovery, balancing growth and inflation concerns as the economy stabilizes.\n",
-    "<br>\n",
-    "- Treasury Yields and the Fed’s Influence:\n",
-    "    - The strong correlation between the Federal Funds Rate and the 10-Year Treasury Yield demonstrates the Fed’s influence on longer-term borrowing costs. In 2020, the drop in Treasury yields reflects a flight to safety, with investors seeking stable returns amid economic uncertainty. By 2024, the response of Treasury yields to the Fed’s rate cut was more measured, indicating investor confidence in the economy’s underlying strength. This contrast underscores how the Fed’s actions shape expectations about future growth, inflation, and overall economic conditions.\n",
-    "<br>\n",
-    "- Economic Growth and Market Alignment:\n",
-    "    - The close relationship between GDP and the NASDAQ Composite reveals how economic growth fuels market performance. In 2020, the Fed’s actions aimed to prevent further GDP contraction, while in 2024, the Fed’s more modest rate cut supported an already growing economy. This difference highlights the importance of context—while the 2020 cuts were part of an emergency response to a collapsing economy, the 2024 cut served as a fine-tuning tool to sustain steady growth.\n",
-    "<br><br>\n",
-    "\n",
-    "The Federal Reserve’s rate cuts in 2020 and 2024 illustrate the importance of context in monetary policy. The drastic cuts in 2020 helped stabilize an economy in freefall, providing essential support during a time of global crisis. In 2024, the Fed used a more targeted approach, reflecting confidence in a resilient economy and focusing on sustaining growth rather than crisis management.\n",
-    "\n",
-    "This analysis highlights the Fed’s role in adapting to the economy’s evolving needs, balancing growth, inflation, and market stability. By understanding how the Fed’s actions impact financial markets and economic indicators, we gain insight into the delicate interplay between policy and the broader economy. The Fed’s ability to navigate these complex dynamics is crucial in fostering a stable, sustainable economic environment."
+    "The analysis of the 2020 and 2024 Federal Reserve rate cuts reveals how significantly monetary policy shapes investor sentiment, depending on the broader economic landscape. In 2020, the aggressive rate cut aimed to restore confidence amidst the economic turmoil of COVID-19; however, initial investor sentiment was dominated by fear and caution, leading to rapid sell-offs as uncertainty permeated the market. The effect of the rate cut, though initially muted, became more pronounced over time, boosting confidence gradually as the pandemic’s impact stabilized. By contrast, the 2024 rate cut generated a more measured and optimistic response, with investors viewing it as a proactive move in a stable economy—reinforcing their trust in the Fed’s commitment to fostering steady growth. This comparison underscores that while Fed rate cuts are a powerful tool in influencing investor sentiment, their immediate impact is deeply shaped by the surrounding economic context. Investors' responses are not just reactions to the policy itself but reflections of their broader expectations and market outlook, making the timing and context of rate cuts essential in shaping economic outcomes."
    ]
   }
  ],
